--- a/style.css
+++ b/style.css
@@ -18,6 +18,7 @@ body {
     --glass: rgba(255, 255, 255, 0.1);
 }
 
+/* @ Editor and Workspaces */
 .editor {
     height: 100vh;
     width: 100%;
@@ -34,12 +35,20 @@ body {
     justify-content: space-between;
 }
 
+.panel {
+    height: 100%;
+    width: 16rem;
+    background-color: var(--bg-panel);
+}
+
+/* @ Canvas Area */
 #canvas {
     position: relative;
-    width: 100%;
-    height: calc(100vh - 100px);
+    width: 75%;
+    height: 80vh;
     background: #efefef;
     cursor: grab;
+    margin: auto;
     overflow: hidden;
     overscroll-behavior: none;
 }
@@ -48,12 +57,19 @@ body {
     cursor: grabbing;
 }
 
-.panel {
-    height: 100%;
-    width: 16rem;
-    background-color: var(--bg-panel);
+/* @ Canvas Elements Styles */
+.element.selected {
+    outline: 2px solid #2563eb;
+    outline-offset: 2px;
 }
 
+.element.text {
+  display: flex;
+  align-items: center;
+  justify-content: center;
+}
+
+/* @ Toolbar */
 .toolbar {
     position: absolute;
     bottom: 1%;
@@ -70,5 +86,10 @@ body {
     .icon {
         font-size: 1.5rem;
         cursor: pointer;
+    }
+
+    .icons.active {
+        background: rgba(255, 255, 255, 0.2);
+        border-radius: 6px;
     }
 }
