--- a/src/style.css
+++ b/src/style.css
@@ -83,6 +83,10 @@ body {
     cursor: grabbing;
 }
 
+#canvas:focus {
+    outline: 2px solid var(--accent);
+}
+
 /* @ Elements */
 .element {
     position: absolute;
@@ -97,7 +101,14 @@ body {
     display: flex;
     align-items: center;
     justify-content: center;
+    cursor: text;
 }
+
+.element.text[contenteditable="true"] {
+  outline: 2px solid #4f46e5;
+  cursor: text;
+}
+
 
 /* @ Resize and Rotate Handle */
 .resize-handle {
@@ -147,7 +158,7 @@ body {
 /* @ Toolbar */
 .toolbar {
     position: absolute;
-    bottom: 1.25rem;
+    bottom: 1rem;
     left: 50%;
     transform: translateX(-50%);
     display: flex;
@@ -165,6 +176,8 @@ body {
     display: flex;
     align-items: center;
     justify-content: center;
+    background: transparent;
+    border: none;
 
     width: 2.25rem;
     height: 2.25rem;
